# controllers/class.js
@@ -1,21 +1,97 @@
 var utils = require('../utils/writer.js');
 var model = require('../models/classM');
-const fs   = require('fs');
+const fs = require('fs');
 var jwt = require('jsonwebtoken');
 
-let privateKEY  = fs.readFileSync('./private.key', 'utf8');
-let publicKEY  = fs.readFileSync('./public.key', 'utf8');
-let i  = 'FitClub Network';          // Issuer 
-let s  = 'agnetiuslee@gmail.com';        // Subject 
-let a  = 'http://fitclub.id'; // Audience
+let privateKEY = fs.readFileSync('./private.key', 'utf8');
+let publicKEY = fs.readFileSync('./public.key', 'utf8');
+let i = process.env.ISSUER; // Issuer 
+let s = process.env.SUBJECT; // Subject 
+let a = process.env.AUDIENCE; // Audience
 
 // SIGNING OPTIONS
 let signOptions = {
-  issuer:  i,
-  subject:  s,
-  audience:  a,
-  expiresIn:  "1h",
-  algorithm:  "RS256"
+  issuer: i,
+  subject: s,
+  audience: a,
+  expiresIn: "1h",
+  algorithm: "RS256"
+};
+
+async function checkToken(token){
+  try{
+    let a = await jwt.verify(token, publicKEY, signOptions);
+    if (a){
+      return a ;
+    }else{
+      console.log("not valid",a)
+      return process.env.UNAUTHORIZED_RESPONSE;
+    }
+  }catch(err){
+    console.log("error check token", err);
+    return process.env.ERRORINTERNAL_RESPONSE;
+  }
+}
+
+module.exports.partnerClass = async function partnerClass(req, res, next) {
+  let token = req.swagger.params['token'].value;
+  let param = req.swagger.params['param'].value;
+  try{
+    let response = {};
+    let data = {};
+    let b = JSON.parse(param);
+    data.param = b;
+    let a = await checkToken(token);
+    data.profile = a;
+    switch(a){
+      case process.env.UNAUTHORIZED_RESPONSE:
+        response = {
+          "responseCode": process.env.UNAUTHORIZED_RESPONSE,
+          "responseMessage": process.env.UNAUTH_MESSAGE
+        } 
+        break;
+      case process.env.ERRORINTERNAL_RESPONSE:
+        response = {
+          "responseCode": process.env.UNAUTHORIZED_RESPONSE,
+          "responseMessage": process.env.UNAUTH_MESSAGE
+        }
+        break
+      default:
+        response = await model.partnerClass(data);
+        break;
+    }
+    utils.writeJson(res, response);
+  }catch(err){
+    console.log("error get schedule on partner place", err)
+  }
+}
+
+module.exports.memberClassHistory = function memberClassHistory(req, res, next) {
+  let token = req.swagger.params['token'].value;
+  let body = {};
+  body.token = token;
+  if (token !== null) {
+    jwt.verify(token, publicKEY, signOptions, function (err, callback) {
+      if (err) {
+        console.log("not valid", err);
+        response = {
+          "responseCode": process.env.UNAUTHORIZED_RESPONSE,
+          "responseMessage": process.env.UNAUTH_MESSAGE
+        }
+        utils.writeJson(res, response);
+      } else {
+        console.log("valid");
+        body.profile = callback;
+        model.memberClassHistory(body)
+          .then(function (response) {
+            utils.writeJson(res, response);
+          })
+          .catch(function (response) {
+            utils.writeJson(res, response);
+          });
+      }
+    })
+  }
 };
 
 module.exports.classList = function classList(req, res, next) {
@@ -53,7 +129,7 @@ module.exports.memberClass = function memberClass(req, res, next) {
   if (token !== null) {
     jwt.verify(token, publicKEY, signOptions, function (err, callback) {
       if (err) {
-        console.log("not valid" , err);
+        console.log("not valid", err);
         response = {
           "responseCode": process.env.UNAUTHORIZED_RESPONSE,
           "responseMessage": process.env.UNAUTH_MESSAGE
@@ -81,9 +157,9 @@ module.exports.classDetail = function classDetail(req, res, next) {
     "classId": classId
   };
   if (token !== null) {
-    jwt.verify(token, process.env.KREDENTIAL_KEY, function (err, callback) {
+    jwt.verify(token, publicKEY, signOptions, function (err, callback) {
       if (err) {
-        console.log("not valid");
+        console.log("not valid", err);
         response = {
           "responseCode": process.env.UNAUTHORIZED_RESPONSE,
           "responseMessage": process.env.UNAUTH_MESSAGE
